Changed height of summary box to a "min-height" to fix overflow problems

--- a/nwxrviewstyle.css
+++ b/nwxrviewstyle.css
@@ -29,7 +29,7 @@
 	width: 25%;
 	display: block;
 	float: right;
-	height: 100px;
+	min-height: 100px;
 }
 
 .nwx-rview-sum {
@@ -38,5 +38,5 @@
 	float: left;
 	display: block;
 	width: 73%;
-	height: 100px;
+	min-height: 100px;
 }
